Ticket #1637 (closed defect: fixed)

Opened 4 months ago

Last modified 3 months ago

Video output never destroyed

Reported by: courmisch Assigned to: courmisch
Priority: high Milestone: 0.9.0-test1
Component: Video output core Version: master
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description

The video output always remain, even when the video is STOPped, or if we switch from a audio/video input to an audio-only input. This is rather ugly.

I would suspect a regression due to 53c74579305052334468d130a3f4bfcfc3757209 or one of these commits though I have not bisected or anything.

Change History

26/06/08 18:49:22 changed by courmisch

  • status changed from new to assigned.
  • owner set to courmisch.

26/06/08 23:26:22 changed by courmisch

27/06/08 17:32:22 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.

30/06/08 22:34:30 changed by courmisch

  • status changed from closed to reopened.
  • resolution deleted.

30/06/08 22:34:40 changed by courmisch

  • status changed from reopened to new.
  • owner deleted.
  • cc deleted.

01/07/08 18:47:26 changed by courmisch

  • status changed from new to assigned.
  • owner set to courmisch.

01/07/08 18:52:28 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.