Remove video output when input stops - fixes #1637